8254877: GCLogPrecious::_lock rank constrains what locks you are allowed to have when crashing